# wiresharkDissectorPluginExample

./: CMakeLists.txt  README.md  conanfile.py
cmake/modules/: WiresharkPlugin.cmake
src/: CMakeLists.txt  packet-foo.c
